--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,7 +5,7 @@
 }
 
 main {
-    margin-top: 100px;
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,9 +31,11 @@ main {
 
 .tasks {
     display: flex;
-    flex-direction: column;
     width: 560px;
     margin-top: 40px;
     gap: 10px;
-    
+    justify-content: center;
+    width: 100%;
+    padding: 0 100px;
+    gap: 50px;
 }
