--- a/src/components/AuthInner/AuthInner.module.css
+++ b/src/components/AuthInner/AuthInner.module.css
@@ -8,6 +8,10 @@
         font-size: 32px;
         color: #8C8C8C;
         margin-bottom: 145px;
+
+        &:hover {
+            color: #000;
+        }
     }
 
     h2 {
@@ -49,7 +53,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-
+            gap: 20px;
             a {
                 font-size: 18px;
 
@@ -59,4 +63,8 @@
             }
         }
     }
+}
+
+.AuthInner__content_form_registration {
+    max-width: 400px !important;
 }
