--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     border-bottom: 2px solid #d3d3d3;
+
     .header__logo {
         text-transform: uppercase;
         font-size: 20px;
@@ -17,11 +18,45 @@
             width: 80px;
             height: 80px;
         }
+
+
+    }
+    @media (max-width: 750px) {
+        .header__logo {
+            font-size: 12px;
+            gap: 10px;
+            svg {
+                width: 50px;
+                height: 50px;
+            }
+        }
+
+    }
+    @media (max-width: 490px) {
+        .header__logo {
+            font-size: 6px;
+            svg {
+                display: none;
+            }
+        }
     }
 
     .header__auth {
         display: flex;
         align-items: center;
         gap: 15px;
+        @media (max-width: 750px) {
+            a{
+            padding: 5px 10px !important;
+            font-size: 15px;
+            }
+        }
+        @media (max-width: 490px) {
+            gap: 5px;
+        }
+    }
+
+    @media (max-width: 490px) {
+        padding: 10px 0;
     }
 }
