--- a/src/components/Task/Task.module.css
+++ b/src/components/Task/Task.module.css
@@ -17,6 +17,25 @@
   p {
     padding: 5px 15px;
   }
+
+  @media (max-width: 1024px) {
+    p {
+      padding: 0;
+      text-align: center;
+    }
+  }
+  @media (max-width: 850px) {
+    padding: 5px;
+  }
+  @media (max-width: 700px) {
+    .Task__complete_back_arrow {
+      transform: rotate(90deg);
+    }
+  }
+  @media (max-width: 590px) {
+    width: 100%;
+    font-size: 13px;
+  }
 }
 
 .CompletedTasks,
@@ -25,7 +44,7 @@
     text-align: center;
     margin-bottom: 20px;
   }
-  width: 550px;
+
 
   .CompletedTasksItems,
   .CurrentTasksItems {
@@ -40,16 +59,21 @@
     .Task {
       text-decoration: line-through;
     }
+
+    @media (max-width: 590px) {
+      padding: 15px;
+    }
   }
 }
 
 .CompletedTasks {
-
-
     img {
         &:hover {
             background-color: var(--blue-hover);
         }
+    }
+    @media (max-width: 590px) {
+      width: 100%;
     }
 }
 
@@ -60,6 +84,14 @@
     border: 2px solid #000;
     padding: 30px;
     border-radius: 10px;
+
+    @media (max-width: 590px) {
+      padding: 15px;
+    }
+  }
+
+  @media (max-width: 590px) {
+    width: 100%;
   }
 }
 
@@ -75,6 +107,7 @@
   &:hover {
     background-color: #63c27fd7;
   }
+
 }
 
 .TaskHovered, .TaskHovered p {
