--- a/src/App.module.css
+++ b/src/App.module.css
@@ -56,3 +56,14 @@ main {
         padding: 0;
     }
 }
+.tasksSections {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+
+    @media (max-width: 700px) {
+        flex-direction: column;
+        gap: 40px;
+    }
+}
