--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -54,6 +54,16 @@
         @media (max-width: 490px) {
             gap: 5px;
         }
+        a {
+            font-size: 20px;
+            font-weight: 500;
+            padding: 15px 20px;
+            border-radius: 10px;
+            background-color: #88b2ff;
+            &:hover {
+                background-color: #88b2ff85;
+            }
+        }
     }
 
     @media (max-width: 490px) {
